--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,9 @@
 <h2><%= @article.title %></h2>
 <p><%= @article.body %></p>
 
+<%= link_to "Edit", edit_article_path(@article) %>
+<br/>
+<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure?"} %>
+<br/>
 <%= link_to "Back", articles_path %>
 
