--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,8 +2,15 @@
 <p><%= @article.body %></p>
 
 <%= link_to "Edit", edit_article_path(@article) %>
+
 <br/>
 <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure?"} %>
+<br/>
+
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
+<%= render partial: 'comments/form' %>
+
 <br/>
 <%= link_to "Back", articles_path %>
 
